--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -2,16 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --scrollbar-bg:rgba(0, 0, 0, .15);
-  --scrollbar-hover: rgba(0, 0, 0, .25);
-}
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --scrollbar-bg:rgba(255, 255, 255, .45);
-  --scrollbar-hover: rgba(255, 255, 255, .25);
-  }
+// 面包屑图标
+.breadcrumb-icon > svg {
+  width:1rem;
+  height:1rem;
 }
 
 /* 修改滚动条样式 */
